--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,12 @@
 {% extends '_base.html' %}
-
 {% block content %}
     <body>
         <form method="post">
             {% csrf_token %}
             {{loginform.as_p}}
-            <input type="submit" value="Login"/>
+            <input type="submit" value="login"/>
         </form>
+
+       <button> <p>Don't have an account?<a  href="{% url 'signup' %}"> signup here</a></button></p>
     </body>
 {% endblock content %}
