--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>signup page</title>
-</head>
+{% extends '_base.html' %}
+
+{% block content %}
 <body>
     <h3>Signup</h3>
 
@@ -18,4 +14,5 @@
 
     </form>
 </body>
+{% endblock content %}
 </html>
