--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,14 +23,12 @@
               
             
         </div>
-        <button style="width: 116px; left: 787px; top: 61px; position: absolute; color: black; font-size: 24px; font-family: Palanquin Dark; font-weight: 400; word-wrap: break-word"><a  href="{% url 'login' %}">Login</a></button>
+        <button style="width: 116px; left: 787px; top: 61px; position: absolute; color: black; font-size: 24px; font-family: Palanquin Dark; font-weight: 400; word-wrap: break-word"><a  href="{% url 'signin' %}">Login</a></button>
         <button style="width: 90px; left: 397px; top: 61px; position: absolute; color: black; font-size: 24px; font-family: Palanquin Dark; font-weight: 400; word-wrap: break-word"><a  href="{% url 'home' %}">Home</a> </button>
         <button style="width: 91px; left: 544px; top: 61px; position: absolute; color: black; font-size: 24px; font-family: Palanquin Dark; font-weight: 400; word-wrap: break-word"><a  href="{% url 'contact' %}">Contact </a>  </button>
         <button style="width: 84px; left: 676px; top: 61px; position: absolute; color: black; font-size: 24px; font-family: Palanquin Dark; font-weight: 400; word-wrap: break-word"><a href="{% url 'about' %}">About </a> </button>
         <div style="width: 141px; height: 45px; left: 950px; top: 59px; position: absolute; background: #7B66FF; border-radius: 5px"></div>
           
-         
- 
  {% block content %} {% endblock content %}
 </body>
  
