--- a/templates/about.html
+++ b/templates/about.html
@@ -1,24 +1,28 @@
 {% extends '_base.html' %}
 
 {% block content %}
+<!-- Content section for Our Story, Our Team, and Our Mission -->
 <section class="max-w-4xl mx-auto mt-8 p-4">
 
+    <!-- Our Story -->
     <div class="mb-8">
         <h2 class="text-2xl font-bold mb-4">Our Story</h2>
         <p>
-            Welcome to [Your Company/Organization Name]! We are dedicated to [briefly describe your mission or purpose].
-            Our journey began in [year of establishment], and since then, we have been [describe key achievements, milestones, or values].
+            Welcome to A-tech Gadger and Accessories! We are dedicated to supplying quality gadgets at affordable prices.
+            Our journey began in 2015, and since then, we have been committed to providing solutions to customers' requests.
         </p>
     </div>
 
+    <!-- Our Team -->
     <div class="mb-8">
         <h2 class="text-2xl font-bold mb-4">Our Team</h2>
         <p>
             Meet the talented individuals who make up our team. Each member contributes unique skills and passion to
-            [your company/organization name]. Together, we strive to [achieving a common goal or mission].
+            A-Tech. Together, we strive to quality service delivery and a satisfying customer experience.
         </p>
     </div>
 
+    <!-- Our Mission -->
     <div class="mb-8">
         <h2 class="text-2xl font-bold mb-4">Our Mission</h2>
         <p>
@@ -27,6 +31,5 @@
         </p>
     </div>
 
-   
-
+</section>
 {% endblock content %}
