--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,9 @@
     <title>Dashboard</title>
 </head>
 <body>
-
-    <h1> welcome to your dashboard</h1>
+{% if user.is_authenticated %}
+    <h1> welcome {{ username }}</h1>
+    <button><a  href="{% url 'signout' %}">signout</a></button>
+    {% endif %}
 </body>
 </html>
