--- a/templates/about.html
+++ b/templates/about.html
@@ -26,8 +26,8 @@
     <div class="mb-8">
         <h2 class="text-2xl font-bold mb-4">Our Mission</h2>
         <p>
-            At [Your Company/Organization Name], our mission is to [briefly state your mission]. We are committed to
-            [key principles or values] and work towards [specific goals or objectives].
+            At Ten-Ten computers, our mission is to sell high quality products and deliver excellent services. We are committed to
+            be honesty and integrity and work towards giving customers premium product for lesser price.
         </p>
     </div>
 
